[package]
name = "httparena-ntex-tokio"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
ntex = { version = "3", features = ["tokio", "compress"] }
ntex-files = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
